Fix: Set overflow for a better title readability

--- a/frontend/LibraryFrontEnd/src/Component/Opinions/OpinionCreate/OpinionCreate.css
+++ b/frontend/LibraryFrontEnd/src/Component/Opinions/OpinionCreate/OpinionCreate.css
@@ -17,6 +17,11 @@
   border-radius: 10px;
 }
 
+.opinionCreate__booktitle{
+    max-height:3.5rem;
+    overflow:auto;
+}
+
 .opinionCreate--natural {
     background: var(--backgroundcolor-whitesmoke);
 }
